# OpenAI_Agents_Sdk

./: README.md
01/: README.md  pyproject.toml
01/src/project1/: main.py
02/: .env  README.md  pyproject.toml
02/src/project02/: 1_async_concept.py  2_multitasking.py  4_streaming_agent.py  __init__.py  simple_agent.py
