[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "masiff346@gmail.com", email = "76251742+m-asif1@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "chainlit>=2.4.400",
    "openai-agents>=0.0.7",
]

[project.scripts]
project1 = "project1:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
